@@ -32,7 +32,7 @@ die()
 {
    echo $1
    echo "$1" | mailx -s "$VOCAB_NAME Load Failed" $MAINTAINER
-   exit $FAILURE
+   exit 1
 }
 
 # Purpose:  creates directory (if it does not already exist)
@@ -179,14 +179,14 @@ executeProgram()
   writePgmLogFile $LOAD_PROGRAM
 
   case $rc in
-       $FAILURE)
+       1)
           ERROR_MSG="${LOAD_PROGRAM} FAILED!!!! - Check Log File: $FULL_LOG_FILE"
           echo $ERROR_MSG
           echo $0:$ERROR_MSG                       >> $FULL_LOG_FILE 2>&1
           echo "$0:${LOAD_PROGRAM} Output is: $msg" >> $FULL_LOG_FILE 2>&1
           die "$ERROR_MSG";;
 
-       $SUCCESS)
+       0)
           ERROR_MSG="${LOAD_PROGRAM} Was Successful - No Errors Encountered"
           JOB_SUCCESSFUL="true"
           echo $ERROR_MSG
@@ -253,13 +253,13 @@ archive()
   msg=`$JAR_PROGRAM_CALL  2>&1`
   rc=$?
   case $rc in
-       $FAILURE)
+       1)
           ERROR_MSG="JAR Failed!!!! - Check Archive"
           echo $ERROR_MSG
           echo $0:$ERROR_MSG                 >> $FULL_LOG_FILE 2>&1
           echo "$0:JAR Ouput is: $msg"       >> $FULL_LOG_FILE 2>&1;;
   
-       $SUCCESS)
+       0)
           ERROR_MSG="JAR Was Successful - No Errors Encountered"
           echo $ERROR_MSG
           echo $0:$ERROR_MSG                 >> $FULL_LOG_FILE 2>&1;;
