@@ -1,3 +1,11 @@
+TAG: vocload-6-0-4-3
+DATE: 05/24/2016
+STAFF: lec 
+CHANGES:
+1) remove fail/success variables from Configuration.default/VOClib.config
+2) add fix to OBOParser.py/def
+3) convert to Git
+
 TAG: vocload-6-0-4-2
 DATE: 05/24/2016
 STAFF: lec 
